[tool.poetry]
name = "dmss-sql-plugin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dmss_sql_plugin"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.20"
alembic = "^1.12.0"
pytest = "^7.4.1"
nox = "^2023.4.22"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
pytest = "^7.4.1"
nox = "^2023.4.22"
coverage = "^7.2.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
