[tool.poetry]
name = "dmss-sql-plugin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "plugin"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.21"
alembic = "^1.12.0"
pydantic = "^2.3.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
pytest = "^7.4.2"
nox = "^2023.4.22"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
